# scratch_pad_chia

./: .gitignore  README.md  chialisp.json  pyproject.toml
puzzles/: __init__.py  first.clsp  inner_puzzle.clsp  outer_puzzle.clsp  password.clsp  piggybank.clsp  singleton_launcher.clsp  singleton_top_layer_v1_1.clsp
puzzles/include/: condition_codes.clib  curry-and-treehash.clib  curry.clib  singleton_truths.clib  utility_macros.clib
puzzles_tests_py/src/: smart_coin.py
puzzles_tests_py/tests/: piggybank_drivers.py  test_inner_puzzle.py  test_password.py  test_piggybank.py  test_singleton.py  utils.py
