[project]
name = "scratch-pad-chia"
version = "0.1.0"
description = ""
authors = [
    {name = "givn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "scratch_pad_chia", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
