[project]
name = "scratch-pad-chia"
version = "0.1.0"
description = ""
authors = [
    {name = "givn"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
packages = [{include = "puzzles_tests_py"}]

[tool.poetry.dependencies]
python = "^3.11"
clvm-tools-rs = "^0.1.45"
pytest = "^8.3.3"
clvm-rs = "^0.2.3"
chia-blockchain = "^2.5.3"
chia-dev-tools = [{git="https://github.com/Chia-Network/chia-dev-tools"}]
chialisp_loader = "^0.1.2"
chialisp_builder = "^0.1.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
